--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-spinners": "^0.8.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
